--- a/manytask/templates/tasks.html
+++ b/manytask/templates/tasks.html
@@ -48,7 +48,7 @@
     }
 
     .assignment.solved {
-        background-color: #66b5cd;
+        background-color: #cdb566;
     }
 
     .assignment.approved {
@@ -56,7 +56,7 @@
     }
 
     .assignment.rejected {
-        background-color: #cdb566;
+        background-color: #cd6666;
     }
 
     .assignment.over_solved {
@@ -64,7 +64,7 @@
     }
 
     .assignment.solved_partially {
-        background-color: #a27fdc;
+        background-color: #857fdc;
     }
     .assignment.special {
         border: 2px solid #f0ad4e!important;
