--- a/manytask/templates/layout.html
+++ b/manytask/templates/layout.html
@@ -6,8 +6,8 @@
 {% set solved_score = scores.values() | sum() %}
 {% set bonus_score_string = "+" ~ bonus_score if bonus_score > 0 else "" %}
 {% set solved_score_string = solved_score ~ "(" ~ approved_score ~ ")" ~ bonus_score_string %}
-{% set solved_percent = (solved_score / current_course.deadlines.max_score_started * 100) if current_course.deadlines.max_score_started > 0 else 0 | round(1, 'common') %}
-{% set approved_percent = (approved_score / current_course.deadlines.max_score_started * 100) if current_course.deadlines.max_score_started > 0 else 0 | round(1, 'common') %}
+{% set solved_percent = ((solved_score / current_course.deadlines.max_score_started * 100) if current_course.deadlines.max_score_started > 0 else 0) | round(1, 'common') %}
+{% set approved_percent = ((approved_score / current_course.deadlines.max_score_started * 100) if current_course.deadlines.max_score_started > 0 else 0) | round(1, 'common') %}
 
 
     <style>
