--- a/manytask/templates/signup.html
+++ b/manytask/templates/signup.html
@@ -26,19 +26,21 @@
                     <input type="text" name="username" class="form-control" id="floatingUsername" placeholder="username" pattern="\S*" minlength="1" maxlength="32" required>
                     <label for="floatingUsername">Username</label>
                 </div>
-                <div class="d-flex flex-row justify-content-between w-100 my-2">
-                    <div class="form-floating me-2">
-                        <input type="text" name="firstname" class="form-control" id="floatingFirstname" placeholder="Firstname" pattern="\S*" minlength="2" maxlength="32" required>
-                        <label for="floatingFirstname">First name</label>
-                    </div>
-                    <div class="form-floating">
-                        <input type="text" name="lastname" class="form-control" id="floatingFamilyname" placeholder="Familyname" pattern="\S*" minlength="2" maxlength="32" required>
-                        <label for="floatingFamilyname">Family name</label>
-                    </div>
+                <div class="form-floating my-2">
+                    <input type="text" name="surname" class="form-control" id="floatingFamilyname" placeholder="Familyname" pattern="\S*" minlength="2" maxlength="32" required>
+                    <label for="floatingFamilyname">Family name (in Russian)</label>
                 </div>
                 <div class="form-floating my-2">
-                    <input type="email" name="email" class="form-control" id="floatingEmail" placeholder="name@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
-                    <label for="floatingEmail">Email address</label>
+                    <input type="text" name="firstname" class="form-control" id="floatingFirstname" placeholder="Firstname" pattern="\S*" minlength="2" maxlength="32" required>
+                    <label for="floatingFirstname">First name (in Russian)</label>
+                </div>
+                <div class="form-floating my-2">
+                    <input type="text" name="patronymic" class="form-control" id="floatingPatronymic" placeholder="Patronymic" pattern="\S*" minlength="2" maxlength="32" required>
+                    <label for="floatingPatronymic">Patronymic (in Russian)</label>
+                </div>
+                <div class="form-floating my-2">
+                    <input type="email" name="email" class="form-control" id="floatingEmail" placeholder="example@phystech.edu" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                    <label for="floatingEmail">Email address (preferably @phystech.edu)</label>
                 </div>
                 <div class="form-floating my-2">
                     <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" pattern="\S*" minlength="6" required>
