--- a/manytask/templates/signup.html
+++ b/manytask/templates/signup.html
@@ -31,16 +31,16 @@
                     <label class="text-center">Names in Russian language</label>
                     <div class="d-flex flex-row justify-content-between w-100 my-2">
                         <div class="form-floating me-2">
-                            <input type="text" name="surname" class="form-control" id="floatingFamilyname" placeholder="Familyname" pattern="\S*" minlength="2" maxlength="32" required>
+                            <input type="text" name="surname" class="form-control" id="floatingFamilyname" placeholder="Familyname" pattern="[а-яёА-ЯЁ]*" minlength="2" maxlength="32" required>
                             <label for="floatingFamilyname">Family name</label>
                         </div>
                         <div class="form-floating me-2">
-                            <input type="text" name="firstname" class="form-control" id="floatingFirstname" placeholder="Firstname" pattern="\S*" minlength="2" maxlength="32" required>
+                            <input type="text" name="firstname" class="form-control" id="floatingFirstname" placeholder="Firstname" pattern="[а-яёА-ЯЁ]*" minlength="2" maxlength="32" required>
                             <label for="floatingFirstname">First name</label>
                         </div>
                     </div>
                     <div class="form-floating me-2">
-                        <input type="text" name="patronymic" class="form-control" id="floatingPatronymic" placeholder="Patronymic" pattern="\S*" minlength="2" maxlength="32" required>
+                        <input type="text" name="patronymic" class="form-control" id="floatingPatronymic" placeholder="Patronymic" pattern="[а-яёА-ЯЁ]*" minlength="2" maxlength="32">
                         <label for="floatingPatronymic">Patronymic name</label>
                     </div>
                     <hr/>
