Fix link to profile

--- a/manytask/templates/layout.html
+++ b/manytask/templates/layout.html
@@ -94,7 +94,7 @@
                     <span class="d-inline-block fw-bold">[{{ username }}]</span>
                 </a>
                 <ul class="dropdown-menu text-small dropdown-menu-end">
-                    <li><a class="dropdown-item" target="_blank" href="{{ gitlab_url }}/-/profile">Account Settings</a></li>
+                    <li><a class="dropdown-item" target="_blank" href="{{ gitlab_url }}/{{ username }}">Account Settings</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#" data-bs-theme-value="light"><i class="fa-fw fa-solid fa-sun "></i>&nbsp;Light Theme</a></li>
                     <li><a class="dropdown-item" href="#" data-bs-theme-value="dark"><i class="fa-fw fa-solid fa-moon"></i>&nbsp;Dark Theme</a></li>
