Change task link to student repo

--- a/manytask/templates/tasks.html
+++ b/manytask/templates/tasks.html
@@ -171,7 +171,7 @@
                 {% if task.url %}
                   {% set task_link = task.url %}
                 {% else %}
-                  {% set task_link = current_course.config.ui.task_url_template | replace('$GROUP_NAME', group.name) | replace('$TASK_NAME', task.name) %}
+                  {% set task_link = current_course.config.ui.task_url_template | replace('$STUDENT', username) | replace('$GROUP_NAME', group.name) | replace('$TASK_NAME', task.name) %}
                 {% endif %}
 
                 {% if reviews.get(task.name, None) is true %}
